welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:6: error: ';' expected but 'return' found.
	} return test;
          ^